--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -39,7 +39,7 @@
 
 - name: copy backend service #copy only work for files without variables.,so using template module
   ansible.builtin.template:
-    src: backend.service.j2
+    src: backend.service.jinja2
     dest: /etc/systemd/system/backend.service
 
 - name: ansible to install pymysql
