--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -32,7 +32,7 @@
 
 - name: copy expense conf
   ansible.builtin.template:
-    src: expense.conf.j2
+    src: expense.conf.jinja2
     dest: /etc/nginx/default.d/expense.conf
 
 - name: restart nginx
