expense-ansible-roles

--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -46,7 +46,7 @@
   ansible.builtin.pip:
     name:
     - PyMySQL
-    - crytography
+    - cryptography
     executable: pip3.9    
 
 - name: import mysql data
